Update navbar name

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">
-                            Linux
+                            Software
                         </a>
                     </li>
                     <li class="nav-item ">
