Update with logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <!-- Brand -->
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <h2>InspireCS</h2>
+                InspireCS
             </a>
 
             <!-- Toggler -->
@@ -135,7 +135,7 @@
 
                     <!-- Heading -->
                     <h2 class="lg-title mb-2">
-                        What We Do
+                        <img src="logo.png">
                     </h2>
 
                     <!-- Subheading -->
