--- a/about.html
+++ b/about.html
@@ -58,4 +58,9 @@
     <a class="button" href="mailto:inspireandpotential@gmail.com">Contact Us</a>
     <br><br><br><br>
   </body>
+  <footer>
+    <br>
+    <div>Website by Daniel Wei.</div>
+    <div>InspireCS is a nonprofit initiative under the fiscal responsibility of <a href="https://inspirepotential.org/">The Inspire Potential organization</div>.
+  </footer>
 </html>
