--- a/index.html
+++ b/index.html
@@ -38,5 +38,11 @@
     <div class="animatron">
       <img width="100px" src="airplane.jpg">
     </div>
+    <br><br><br>
   </body>
+  <footer>
+    <br>
+    <div>Website by Daniel Wei.</div>
+    <div>InspireCS is a nonprofit initiative under the fiscal responsibility of <a href="https://inspirepotential.org/">The Inspire Potential organization</div>.
+  </footer>
 </html>
