--- a/camp.html
+++ b/camp.html
@@ -54,4 +54,9 @@
     </div>
     <br><br><br><br>
   </body>
+  <footer>
+    <br>
+    <div>Website by Daniel Wei.</div>
+    <div>InspireCS is a nonprofit initiative under the fiscal responsibility of <a href="https://inspirepotential.org/">The Inspire Potential organization</div>.
+  </footer>
 </html>
