--- a/grant.html
+++ b/grant.html
@@ -39,4 +39,9 @@
     <img src="laptop.jpg" width="500px">
     <br><br>
   </body>
+  <footer>
+    <br>
+    <div>Website by Daniel Wei.</div>
+    <div>InspireCS is a nonprofit initiative under the fiscal responsibility of <a href="https://inspirepotential.org/">The Inspire Potential organization</div>.
+  </footer>
 </html>
