--- a/camp.html
+++ b/camp.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="A nonprofit initiative">
     <meta name="keywords" content="nonprofit, stem, coding, camp, computer, science, computer science">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <nav>
