Mobile friendly site

--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
       <a href="about.html"  class="activenavbutton">
         About
       </a>
+      <a href="team.html" class="navbutton">
+        Team
+      </a>
       <a href="camp.html"  class="navbutton">
         Camp
       </a>
@@ -27,10 +30,10 @@
       </a>
     </nav>
     <br><br>
-    <a href="https://nostarchfoundation.org/grant-recipients/"><img src="grant.png" width="500px"></a>
+    <a href="https://nostarchfoundation.org/grant-recipients/"><img src="grant.png" width="40%"></a>
     <br><br>
     <h1>Our Mission</h1>
-    <div class="moreabout">
+    <div class="logocover">
       While computer science is one of the most rapidly-developing, profitable, and essential fields of study in the modern world, it is also unfortunately one of the most stratified. The grim fact of reality is that an early exposure to computer science is critical for becoming competitive in the field, but disadvantaged and underprivileged communities commonly fail to have the economic resources that could empower new generations to take it up as their study of choice. This "Digital Divide" is only widening over time.<br><br>
 
       InspireCS hopes to change that, by directly targeting underfunded communities with a week-long, virtual camp, accessible anywhere and for anyone. We hope to minimize the cost as much as possible, to keep the barrier to entry low, as well as provide notebooks, laptops, and any other materials necessary for study, to all participants, free of additional charge, through a grant. Through this initiative, we hope to create a new incentive for potentially hundreds of students in one of America’s largest cities to take up computer science as a field of study, overcoming backgrounds that would have otherwise prevented it.
@@ -38,25 +41,7 @@
     </div>
 
     <a class="button" href="https://drive.google.com/file/d/1XTEfEekmCiXFJ99QzOXvr3nt3qGfPygq/view?usp=sharing">See the Report</a>
-    <br><br><br><br>
-    <h1>Our Team</h1>
-    <div class="flexrow">
-      <div class="person">
-        Daniel Wei
-        </div>
-        <div class="person">
-          Ryan Ma
-          </div>
-          <div class="person">
-            Danielle Okuseinde
-            </div>
-    </div>
-    <div class="flexrow">
-      <img class="avatar" width="15%" src="dan1.jpg">
-      <img class="avatar" width="15%" src="ryan1.jpg">
-      <img class="avatar" width="15%" src="danielle1.jpg">
-    </div>
-    <a class="button" href="mailto:inspireandpotential@gmail.com">Contact Us</a>
+
     <br><br><br><br>
   </body>
   <footer>
