--- a/camp.html
+++ b/camp.html
@@ -16,6 +16,9 @@
       <a href="about.html"  class="navbutton">
         About
       </a>
+      <a href="team.html" class="navbutton">
+        Team
+      </a>
       <a href="camp.html"  class="activenavbutton">
         Camp
       </a>
@@ -29,9 +32,8 @@
     <br><br><br>
     <h1>The InspireCS Camp</h1>
     <div class="moreabout">
-      Want to learn with us? Our 2020 virtual camp runs every week, beginning on June 22nd through August 28th.
-      Lessons comprise of virtual lessons, with live teachers and Q&A sessions, on Monday, Wednesday, and Friday from 4-5 PM.
-      Additionally, course materials are published online on <a href="https://www.modulusedu.com/">Modulus</a>, and are free to access forever!
+      Want to learn with us? Our 2020 virtual camp runs every week, beginning on June 27th through July 25th.
+      Each lesson is comprised of one 3-hour session on Saturday, from 1-4 PM, and <i>infinite</i> free access to course materials afterwards.
       <br><br>
       During our courses, we will cover each of the following units:
       <ul>
