--- a/grant.html
+++ b/grant.html
@@ -16,6 +16,9 @@
       <a href="about.html"  class="navbutton">
         About
       </a>
+      <a href="team.html" class="navbutton">
+        Team
+      </a>
       <a href="camp.html"  class="navbutton">
         Camp
       </a>
@@ -37,7 +40,7 @@
     </div>
     <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSd1a5lQFnbpyKEc3FqJXJdjqbyqcHar8DkyPxPwYnXBeacO9w/viewform?usp=sf_link">Apply for a Laptop</a>
     <br><br><br><br>
-    <img src="laptop.jpg" width="500px">
+    <img src="laptop.jpg" width="50%">
     <br><br>
   </body>
   <footer>
