--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <a href="about.html"  class="navbutton">
         About
       </a>
+      <a href="team.html" class="navbutton">
+        Team
+      </a>
       <a href="camp.html"  class="navbutton">
         Camp
       </a>
@@ -42,7 +45,6 @@
     <br><br><br>
   </body>
   <footer>
-    <br>
     <div>Website by Daniel Wei.</div>
     <div>InspireCS is a nonprofit initiative under the fiscal responsibility of <a href="https://inspirepotential.org/">The Inspire Potential organization</div>.
   </footer>
