--- a/camp.html
+++ b/camp.html
@@ -43,7 +43,7 @@
         <li>Web Development</li>
         <li>Application Development</li>
       </ul>
-      <center>Ready to begin? Sign up below!</center>
+      <center><b>We assume you have ZERO experience. No prior knowledge necessary!</b></center>
       <br><br>
     </div>
     <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScUOLBg9gKlUNeJLSv0FlhjHK79edWd4LFOkGlseLnnFpNVeg/viewform?usp=sf_link">Register for the Camp</a>
