--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
       </a>
     </nav>
     <img class="logo" src="logo.png" width="30%">
-
+    <div class="flexrow">
+    	<div class="stat">
+		<h1>$1000+</h1>
+		<h2>in Nonprofit funds</h2>
+	</div>
+	<div class="stat">
+		<h1>200+</h1>
+		<h2>students impacted</h2>
+	</div>
+    </div>
+	
     <div class="logocover">
       <h1>Computer Science, Made Accessible</h1>
       <p>Computer Science is one of the most profitable fields of study of the 21st century, but for many, the barrier to entry is simply too high. InspireCS is a nonprofit initiative centered in Houston, Texas. Our mission: to provide a free, high-quality, and comprehensive education in all the fundamental fields of computer science. </p>
